fixed error that was hiding color blobs behind background color in dynamic background state

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,12 @@ html {
     background-attachment: fixed;
 }
 
-.dynamic {
+/* .dynamic {
+    background-color: #fee440;
+} */
+
+
+body {
     background-color: #fee440;
 }
 
@@ -44,10 +49,6 @@ svg {
     z-index: -1;
 }
 
-/* 
-body {
-    background-color: #fee440;
-} */
 
 
 .gradient {
